Setup url for inner page whitepaper.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 						blockchain-related project. It serves as a technical and informational guide for potential investors,
 						developers, and users of the project, and provides a comprehensive overview of the project&#39;s goals,
 						objectives, and implementation strategy.</p>
-					<a href="pages/index.html" title="Click Here to Signup"> <img alt="" class="btn-img" src="assets/img/btn.png" /> </a>
+					<a href="pages/whitepaper/index.html" title="Click Here to Signup"> <img alt="" class="btn-img" src="assets/img/btn.png" /> </a>
 				</div>
 			</div>
 		</div>
