Setup url for inner page whitepaper.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="container">
 				<header>
 					<div class="header-box">
-						<div class="logo"><a href="https://www.anopiss.com/"><img alt="ANOPISS Logo" class="header-logo"
+						<div class="logo"><a href="/"><img alt="ANOPISS Logo" class="header-logo"
 									src="logo.png" title="ANOPISS Logo" /></a></div>
 
 						<div class="nav-links"><a class="nav-link nav-link-open" href="javascript:void(0);" onclick="openNav()"
@@ -240,7 +240,7 @@
 						blockchain-related project. It serves as a technical and informational guide for potential investors,
 						developers, and users of the project, and provides a comprehensive overview of the project&#39;s goals,
 						objectives, and implementation strategy.</p>
-					<a href="pages/whitepaper/index.html" title="Click Here to Signup"> <img alt="" class="btn-img" src="assets/img/btn.png" /> </a>
+					<a href="pages/whitepaper/" title="Click Here to Signup"> <img alt="" class="btn-img" src="assets/img/btn.png" /> </a>
 				</div>
 			</div>
 		</div>
