--- a/pages/whitepaper/index.html
+++ b/pages/whitepaper/index.html
@@ -19,7 +19,7 @@
         <header>
           <div class="header-box">
             <div class="logo">
-              <a href="../index.html"><img src="../logo.png" alt="ANOPISS Logo" title="ANOPISS Logo"
+              <a href="../../"><img src="../logo.png" alt="ANOPISS Logo" title="ANOPISS Logo"
                   class="header-logo"></a>
             </div>
             <div class="nav-links">
