--- a/pages/whitepaper/index.html
+++ b/pages/whitepaper/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="header-footer.css">
-  <link rel="stylesheet" href="../style.min.css">
+  <link rel="stylesheet" href="../../style.min.css">
   <link rel="stylesheet" href="style.min.css">
   <title>ANOPISS | White Paper</title>
 </head>
