whitepaper media and files are fixed with url conflicts.

--- a/pages/whitepaper/index.html
+++ b/pages/whitepaper/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="header-footer.css">
   <link rel="stylesheet" href="../../style.min.css">
-  <link rel="stylesheet" href="style.min.css">
+  <link rel="stylesheet" href="./style.min.css">
   <title>ANOPISS | White Paper</title>
 </head>
 
@@ -19,7 +19,7 @@
         <header>
           <div class="header-box">
             <div class="logo">
-              <a href="../../"><img src="../logo.png" alt="ANOPISS Logo" title="ANOPISS Logo"
+              <a href="../../"><img src="../../logo.png" alt="ANOPISS Logo" title="ANOPISS Logo"
                   class="header-logo"></a>
             </div>
             <div class="nav-links">
@@ -33,13 +33,13 @@
                 </svg>
               </a>
               <ul class="nav-list" id="myNavBar">
-                <li class="nav-list-item"><a href="../index.html#token" class="nav-link">Token</a></li>
-                <li class="nav-list-item"><a href="../index.html#whitepaper" class="nav-link">Whitepaper</a></li>
-                <li class="nav-list-item"><a href="../index.html#roadmap" class="nav-link">Roadmap</a></li>
-                <li class="nav-list-item"><a href="../index.html#tokenomics" class="nav-link">Tokenomics</a></li>
-                <li class="nav-list-item"><a href="../index.html#team" class="nav-link">Team</a></li>
-                <li class="nav-list-item"><a href="../index.html#faqs" class="nav-link">FAQs</a></li>
-                <li class="nav-list-item"><a href="../index.html#contact-us" class="nav-link">Contact Us</a></li>
+                <li class="nav-list-item"><a href="../../#token" class="nav-link">Token</a></li>
+                <li class="nav-list-item"><a href="../../#whitepaper" class="nav-link">Whitepaper</a></li>
+                <li class="nav-list-item"><a href="../../#roadmap" class="nav-link">Roadmap</a></li>
+                <li class="nav-list-item"><a href="../../#tokenomics" class="nav-link">Tokenomics</a></li>
+                <li class="nav-list-item"><a href="../../#team" class="nav-link">Team</a></li>
+                <li class="nav-list-item"><a href="../../#faqs" class="nav-link">FAQs</a></li>
+                <li class="nav-list-item"><a href="../../#contact-us" class="nav-link">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -766,7 +766,7 @@
     </div>
   </footer>
 
-  <script src="../script.js"></script>
+  <script src="../../script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
   <script>
     var aValues = ["9%", "6%", "5%", "10%", "10%", "6%", "9%", "45%"];
